# cpp2

./: CMakeLists.txt  test_commands.sh
data/: input24bit.caf  output.caf
src/: bitVector.cpp  bitVector.hpp  main.cpp
src/fileParsers/: cafParser.cpp  cafParser.hpp  fileParser.hpp  wavParser.cpp  wavParser.hpp
src/helpers/: bitVector.cpp  bitVector.hpp  optionParser.cpp  optionParser.hpp
